--- a/num5.ipynb
+++ b/num5.ipynb
@@ -2118,7 +2118,7 @@
     "answers = []\n",
     "\n",
     "for N in range(20, 601):\n",
-    "    R = bin(N)[2:-2]\n",
+    "    R = bin(N)[2:]\n",
     "    R = int(R, 2)\n",
     "    if R not in answers:\n",
     "        answers.append(R)\n",
