--- a/num17/num17.ipynb
+++ b/num17/num17.ipynb
@@ -28,9 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18 16835\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [int(i) for i in open('17-1.txt')]\n",
     "\n",
@@ -40,7 +48,7 @@
     "\n",
     "max_sum = -10000000000\n",
     "\n",
-    "for i in range(len(nums)-1):\n",
+    "for i in range(len(nums)-1): \n",
     "    num_1 = nums[i]\n",
     "    num_2 = nums[i+1]\n",
     "    if num_1 > average and num_2 > average:\n",
@@ -65,31 +73,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1137 -2655\n"
+      "52 172370\n"
      ]
     }
    ],
    "source": [
-    "nums = [int(i) for i in open('17var13.txt.txt')]\n",
+    "nums = [int(i) for i in open('17var01.txt.txt')]\n",
     "\n",
     "cnt = 0\n",
-    "\n",
+    "min_kratn = 1000000000\n",
+    "for x in nums:\n",
+    "    if x%21==0:\n",
+    "        min_kratn = min(min_kratn, x)\n",
     "max_i = -1000000\n",
-    "\n",
     "for i in range(len(nums)-1):\n",
     "    num_1 = nums[i]\n",
     "    num_2 = nums[i+1]\n",
-    "    if (num_1 + num_2) >= 100:\n",
-    "        if num_1 < 0 or num_2 < 0:\n",
-    "            cnt += 1\n",
-    "            max_i = max(max_i, num_1*num_2)\n",
+    "    if num_1 % min_kratn == 0:\n",
+    "        cnt += 1\n",
+    "        max_i = max(max_i, num_1+num_2)\n",
     "\n",
     "print(cnt, max_i)"
    ]
@@ -340,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
