--- a/test.ipynb
+++ b/test.ipynb
@@ -2,19 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "[1, 2, 4, 5, 10, 20, 25, 50, 100]\n"
      ]
     }
    ],
    "source": [
-    "print(int(4.9))"
+    "n = 100\n",
+    "dels = set()\n",
+    "for delitel in range(1, int(n**0.5)+1):\n",
+    "    if n % delitel == 0:\n",
+    "        dels.add(delitel)\n",
+    "        dels.add(n//delitel)\n",
+    "print(sorted(dels))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 2):\n",
+    "    print(i)"
    ]
   }
  ],
@@ -34,7 +58,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
