--- a/test.ipynb
+++ b/test.ipynb
@@ -2,42 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 4, 5, 10, 20, 25, 50, 100]\n"
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "n = 100\n",
-    "dels = set()\n",
-    "for delitel in range(1, int(n**0.5)+1):\n",
-    "    if n % delitel == 0:\n",
-    "        dels.add(delitel)\n",
-    "        dels.add(n//delitel)\n",
-    "print(sorted(dels))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(1, 2):\n",
+    "for i in range(10, -1, -1):\n",
     "    print(i)"
    ]
   }
