--- a/num15A.ipynb
+++ b/num15A.ipynb
@@ -94,16 +94,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ДЕЛ(x, A) -> x % A == 0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "6\n",
+      "9\n",
+      "18\n",
+      "27\n",
+      "54\n"
+     ]
+    }
+   ],
    "source": [
-    "for A in range(1, 10000):\n",
+    "for A in range(1, 1000):\n",
     "    ok = True\n",
-    "    for x in range(1,10000):\n",
-    "        if ((not(x%A==0)) <= ((x%54==0) <= (not(162%x==0)))) == 0:\n",
+    "    for x in range(1, 1000):\n",
+    "        if ((x%A != 0) <= ( (x%54==0)  <= (162%x!=0))) == 0:\n",
     "            ok = False\n",
+    "            break\n",
     "    if ok == True:\n",
     "        print(A)\n",
     "\n",
