--- a/num16.ipynb
+++ b/num16.ipynb
@@ -21,7 +21,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "639\n"
+      "203\n"
      ]
     }
    ],
@@ -33,7 +33,7 @@
     "        return 0\n",
     "    return t23(start+2, finish)+t23(start+7, finish)\n",
     "\n",
-    "print(t23(7,51))"
+    "print(t23(7,25) * t23(25, 51))"
    ]
   },
   {
@@ -168,32 +168,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56355\n"
+      "815\n",
+      "940\n"
      ]
     }
    ],
    "source": [
     "def F(n):\n",
-    "    if n < 4:\n",
+    "    if n <= 9:\n",
     "        return n\n",
-    "    if n >= 4 and n % 4 == 0:\n",
-    "        return F(n//4) - 1\n",
-    "    if n >= 4 and n % 4 != 0:\n",
-    "        return F(n-3) + 4\n",
+    "    if n > 9 and n % 5 == 0:\n",
+    "        return n + F(n//5+2)\n",
+    "    if n > 9 and n % 5 != 0:\n",
+    "        return n + F(n+5)\n",
     "    \n",
-    "cnt = 0\n",
-    "for n in range(1, 2000000):\n",
-    "    if F(n) == 54:\n",
-    "        cnt += 1\n",
-    "\n",
-    "print(cnt)"
+    "for n in range(1, 1000):\n",
+    "    try:\n",
+    "        if F(n) > 999:\n",
+    "            print(n)\n",
+    "    except RecursionError:\n",
+    "        continue\n"
    ]
   },
   {
@@ -210,10 +211,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6590934000\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# 3050-2050\n",
+    "\n",
+    "a = [0]*3100\n",
+    "\n",
+    "for n in range(1, 3060):\n",
+    "    if n == 1:\n",
+    "        a[n] = 2\n",
+    "    if n > 1:\n",
+    "        a[n] = n+n**2 + a[n-1]\n",
+    "\n",
+    "print(a[3050]-a[2050])"
+   ]
   },
   {
    "attachments": {
@@ -347,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
