--- a/num2.ipynb
+++ b/num2.ipynb
@@ -116,40 +116,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y z w x\n",
-      "0 0 0 0\n",
-      "0 0 0 1\n",
-      "0 0 1 0\n",
-      "0 0 1 1\n",
-      "0 1 0 0\n",
-      "0 1 0 1\n",
-      "0 1 1 0\n",
-      "0 1 1 1\n",
+      "x y z w\n",
       "1 0 0 0\n",
-      "1 0 0 1\n",
       "1 0 1 0\n",
-      "1 0 1 1\n",
-      "1 1 0 0\n",
-      "1 1 0 1\n",
-      "1 1 1 0\n",
-      "1 1 1 1\n"
+      "1 0 1 1\n"
      ]
     }
    ],
    "source": [
-    "print('y z w x')\n",
+    "print('x y z w')\n",
     "for x in 0,1:\n",
     "    for y in 0,1:\n",
     "        for z in 0,1:\n",
     "            for w in 0,1:\n",
-    "                print(x,y,z,w)"
+    "                if (not(x) or y or (not(z) and w)) == 0:\n",
+    "                    print(x,y,z,w)"
    ]
   },
   {
@@ -192,16 +180,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y z w x\n",
+      "0 0 1 0\n",
+      "0 0 1 1\n",
+      "1 0 1 1\n",
+      "1 1 1 0\n"
+     ]
+    }
+   ],
    "source": [
     "print('y z w x')\n",
-    "for x in range(2):\n",
-    "    for y in range(2):\n",
-    "        for z in range(2):\n",
-    "            for w in range(2):\n",
-    "                if (    (((not(x)) and y) == z) and w):\n",
+    "for y in 0,1:\n",
+    "    for z in 0,1:\n",
+    "        for w in 0,1:\n",
+    "            for x in 0,1:\n",
+    "                if ((((not(x)) and y) == z) and w) == 1:\n",
     "                    print(y,z,w,x)"
    ]
   },
@@ -219,17 +219,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z y w x\n",
+      "0 0 0 0\n",
+      "0 1 0 0\n",
+      "0 1 1 1\n",
+      "1 0 0 1\n",
+      "1 0 1 1\n",
+      "1 1 0 1\n",
+      "1 1 1 1\n"
+     ]
+    }
+   ],
    "source": [
-    "print('w y z x')\n",
-    "for x in range(2):\n",
+    "print('z y w x')\n",
+    "for z in range(2):\n",
     "    for y in range(2):\n",
-    "        for z in range(2):\n",
-    "            for w in range(2):\n",
+    "        for w in range(2):\n",
+    "            for x in range(2):\n",
     "                if (  ((x and (not(y)) or (w <= z))) == (z==x)    ):\n",
-    "                    print(w,y,z,x)"
+    "                    print(z,y,w,x)"
    ]
   },
   {
@@ -258,9 +273,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w x y z\n",
+      "1 0 1 0\n",
+      "0 1 1 0\n",
+      "0 1 1 1\n"
+     ]
+    }
+   ],
    "source": [
     "print('w x y z')\n",
     "for x in range(2):\n",
@@ -443,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
